Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Planned_Visit_Location__c.field-meta.xml
<CustomField>
    <fullName>Planned_Visit_Location__c</fullName>
    <formula>Tour_Plan1__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Visit Location</label>
    <type>Text</type>
</CustomField>