Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Planned_Visit_State__c.field-meta.xml
<CustomField>
    <fullName>Planned_Visit_State__c</fullName>
    <formula>TEXT(Tour_Plan1__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Visit State</label>
    <type>Text</type>
</CustomField>