Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Plumber_Mechanic_Engineers_Factory_Visit__c.field-meta.xml
<CustomField>
    <fullName>Plumber_Mechanic_Engineers_Factory_Visit__c</fullName>
    <label>Plumber/Mechanic/Engineers Factory Vi(nu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>