Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Points_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Points_Discussed__c</fullName>
    <label>Points Discussed</label>
    <type>TextArea</type>
</CustomField>