Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Primary_Contact_Details1__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Details1__c</fullName>
    <formula>IF(OR(NOT(ISBLANK(Party_Name__r.Primary_Contact_Person_Name__c)),NOT(ISBLANK( Party_Name__r.Contact_Number_Mobile__c )),NOT(ISBLANK( Party_Name__r.Contact_Number_Phone__c ))), Primary_Contact_Details__c ,&apos;-&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Details</label>
    <type>Text</type>
</CustomField>