Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Primary_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Details__c</fullName>
    <description>Used for report purpose https://na1.salesforce.com/00O30000007hElW</description>
    <formula>&apos;Name:&apos;+Party_Name__r.Primary_Contact_Person_Name__c + &apos; &apos;  + &apos;Mobile:&apos; + Party_Name__r.Contact_Number_Mobile__c +&apos; &apos;+ &apos;Phone:&apos;+ Party_Name__r.Contact_Number_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Details</label>
    <type>Text</type>
</CustomField>