Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WCPC new order</fullName>
            </value>
            <value>
                <fullName>WCPC repeat order</fullName>
            </value>
            <value>
                <fullName>V4</fullName>
            </value>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>UPVC</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>Column Pipes</fullName>
            </value>
            <value>
                <fullName>Sanitary System</fullName>
            </value>
            <value>
                <fullName>External Drainage</fullName>
            </value>
            <value>
                <fullName>Concealed Cisterns</fullName>
            </value>
            <value>
                <fullName>Silent SWR</fullName>
            </value>
            <value>
                <fullName>Air Admittance Valve</fullName>
            </value>
            <value>
                <fullName>Waste &amp; Traps</fullName>
            </value>
            <value>
                <fullName>Valves (BUV &amp; BFV)</fullName>
            </value>
            <value>
                <fullName>Grease Seperator</fullName>
            </value>
            <value>
                <fullName>Multiquick</fullName>
            </value>
            <value>
                <fullName>Agri Pipes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>