Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projects</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>