Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <inlineHelpText>Please fill the value</inlineHelpText>
    <label>Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Party_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>New Order Booking</fullName>
            </value>
            <value>
                <fullName>Order Follow Up</fullName>
            </value>
            <value>
                <fullName>Payment Follow up</fullName>
            </value>
            <value>
                <fullName>Market Survey</fullName>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Approval for Ashirvad Brand</fullName>
            </value>
            <value>
                <fullName>Building Relationship</fullName>
            </value>
            <value>
                <fullName>Complaints-Aqua</fullName>
            </value>
            <value>
                <fullName>Complaints-Column</fullName>
            </value>
            <value>
                <fullName>Complaints-CPVC</fullName>
            </value>
            <value>
                <fullName>Complaints-SWR</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Product Presentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>