Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Reason_for_change_in_the_Tour_Plan__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_change_in_the_Tour_Plan__c</fullName>
    <label>Reason for change in the Tour Plan</label>
    <type>TextArea</type>
</CustomField>