Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Reason_for_Non_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Non_Visit__c</fullName>
    <label>Reason for Other Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attending a Complaint</fullName>
            </value>
            <value>
                <fullName>Exhibition/Shows</fullName>
            </value>
            <value>
                <fullName>Depot meet/Office meet</fullName>
            </value>
            <value>
                <fullName>Holiday / Market Closed</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
            <value>
                <fullName>Market Survey</fullName>
            </value>
            <value>
                <fullName>Compensatory Leave</fullName>
            </value>
            <value>
                <fullName>Jeep Maintenance</fullName>
            </value>
            <value>
                <fullName>Post Visit order</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>