Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Reason_For_Travelling_During_Day__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Travelling_During_Day__c</fullName>
    <label>Reason For Travelling During Day(notuse)</label>
    <type>TextArea</type>
</CustomField>