Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Reason_MOM__c.field-meta.xml
<CustomField>
    <fullName>Reason_MOM__c</fullName>
    <label>Reason/MOM</label>
    <type>TextArea</type>
</CustomField>