Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>UPVC</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>Column pipes</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>