Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Remarks_for_Not_meeting_the_Visit_Target__c.field-meta.xml
<CustomField>
    <fullName>Remarks_for_Not_meeting_the_Visit_Target__c</fullName>
    <formula>Tour_Plan1__r.Remarks_for_Not_meeting_the_Visit_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remarks for Not meeting the Visit Target</label>
    <type>Text</type>
</CustomField>