Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Report_To_Management__c.field-meta.xml
<CustomField>
    <fullName>Report_To_Management__c</fullName>
    <label>Suggest from Management</label>
    <type>TextArea</type>
</CustomField>