Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Based on Pump/ Motor-Rating</inlineHelpText>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>