Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time(not used)</label>
    <type>DateTime</type>
</CustomField>