Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(!ISBLANK( Party_Name__c ), TEXT(Party_Name__r.Status__c),
IF(!ISBLANK( Contacts__c ), TEXT( Contacts__r.Status__c ) ,
IF(!ISBLANK( Distributor_Dealer__c ), TEXT(  Distributor_Dealer__r.Status__c ) ,
 TEXT(Party_Name__r.Status__c) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>