Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/TL__c.field-meta.xml
<CustomField>
    <fullName>TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TL</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$User.ManagerId</valueField>
        </filterItems>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$User.Manager1__c</valueField>
        </filterItems>
        <filterItems>
            <field>User.Id</field>
            <operation>equals</operation>
            <valueField>$User.Manager2__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>