Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/TL_Approval__c.field-meta.xml
<CustomField>
    <fullName>TL_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TL Approval</label>
    <type>Checkbox</type>
</CustomField>