Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To(not used)</label>
    <type>TextArea</type>
</CustomField>