Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Total_Available_Dealers_in_the_market__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Dealers_in_the_market__c</fullName>
    <label>Total Available Dealers in the market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>