Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Tour_Plan1__c.field-meta.xml
<CustomField>
    <fullName>Tour_Plan1__c</fullName>
    <label>Tour Plan</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) AND ((3 AND 4) OR (5 AND 6) OR (7 AND 8)))</booleanFilter>
        <filterItems>
            <field>Tour_Plan1__c.Tour_Program__r.Tour_Program_Approved__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Tour_Plan1__c.Date__c</field>
            <operation>equals</operation>
            <valueField>$Source.Date__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>BD, TL NEW,Exports,BD Branding</value>
        </filterItems>
        <filterItems>
            <field>Tour_Plan1__c.Validation_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>-1</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>HO NEW</value>
        </filterItems>
        <filterItems>
            <field>Tour_Plan1__c.Validation_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>-4</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>Tour_Plan1__c.Validation_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>-365</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tour_Plan1__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>