Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Other Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>