Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Type_of_Non_Visit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Non_Visit__c</fullName>
    <label>Type of Non Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
            <value>
                <fullName>Attending a Complaint</fullName>
            </value>
            <value>
                <fullName>Exhibition/Shows</fullName>
            </value>
            <value>
                <fullName>Held up at Depot</fullName>
            </value>
            <value>
                <fullName>Held up at Distributor/Dealer/Contact</fullName>
            </value>
            <value>
                <fullName>Holiday / Market Closed</fullName>
            </value>
            <value>
                <fullName>Jeep Maintenance</fullName>
            </value>
            <value>
                <fullName>Meeting at HO</fullName>
            </value>
            <value>
                <fullName>Meeting with Team Leader</fullName>
            </value>
            <value>
                <fullName>Mentoring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Traveling Outstation</fullName>
            </value>
            <value>
                <fullName>Market Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>