Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>Verification_Type__c</fullName>
    <label>Verification Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>