Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head Quarter</fullName>
            </value>
            <value>
                <fullName>Ex-Station</fullName>
            </value>
            <value>
                <fullName>Out Station</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>