Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Worked_With__c.field-meta.xml
<CustomField>
    <fullName>Worked_With__c</fullName>
    <label>Worked With</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>With TL</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Group work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>