Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/fields/Worked_withTL__c.field-meta.xml
<CustomField>
    <fullName>Worked_withTL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worked with</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>