Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/validationRules/Depot_Meet.validationRule-meta.xml
<ValidationRule>
    <fullName>Depot_Meet</fullName>
    <active>false</active>
    <errorConditionFormula>AND( CreatedBy.ProfileId=&apos;00e30000001yGyh&apos;, ISPICKVAL(Reason_for_Non_Visit__c,&apos;Depot Meet&apos;  ))</errorConditionFormula>
    <errorMessage>Depot Meet Cannot be choosed by BDM/BD</errorMessage>
</ValidationRule>