Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/validationRules/Site_Visit_must_be_linked_to_tour_plan.validationRule-meta.xml
<ValidationRule>
    <fullName>Site_Visit_must_be_linked_to_tour_plan</fullName>
    <active>true</active>
    <description>Site Visit Must be linked to tour plan</description>
    <errorConditionFormula>ISBLANK( Tour_Plan1__c )</errorConditionFormula>
    <errorMessage>You should not create Site visits directly.Please create from Visit Entry ..!!</errorMessage>
</ValidationRule>