Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/validationRules/VisitDate_More_Than_A_Days_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>VisitDate_More_Than_A_Days_in_Past</fullName>
    <active>false</active>
    <errorConditionFormula>(($User.HO__c==TRUE)&amp;&amp;  Date__c &lt; Today()- 4) || 
(($User.HO__c!=TRUE)&amp;&amp; (TODAY()- Date__c) &gt; 2)</errorConditionFormula>
    <errorMessage>Visit date cannot be more than a day in the past from today&apos;s date</errorMessage>
</ValidationRule>