Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Tour_Plan1__c</columns>
    <columns>Type__c</columns>
    <columns>Party_Type__c</columns>
    <columns>Party_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Distributor_Dealer__c</columns>
    <columns>Contacts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>