Partial_14Dec2021/force-app/main/default/objects/Site_Visit__c/listViews/Today_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Today_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>Visit_Type__c</columns>
    <columns>Date__c</columns>
    <columns>Tour_Plan1__c</columns>
    <columns>Reason_for_Non_Visit__c</columns>
    <columns>Type__c</columns>
    <columns>Party_Type__c</columns>
    <columns>Party_Name__c</columns>
    <columns>Distributor_Dealer__c</columns>
    <columns>Contacts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Site Visits</label>
</ListView>